--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="dist/css/main.css">
   <title>Welcome To My Portfolio</title>
 </head>
 
@@ -32,17 +32,17 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="about.html" class="nav-link">
+                <a href="dist/about.html" class="nav-link">
                   About Me
                 </a>
               </li>
               <li class="nav-item">
-                <a href="work.html" class="nav-link">
+                <a href="dist/work.html" class="nav-link">
                   My Work
                 </a>
               </li>
               <li class="nav-item">
-                <a href="contact.html" class="nav-link">
+                <a href="dist/contact.html" class="nav-link">
                   How To Reach Me
                 </a>
               </li>
@@ -79,7 +79,7 @@
       
   </div>
   
-  <script src="js/main.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 
 </html>
