--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  
   <link rel="stylesheet" href="dist/css/main.css">
   <title>Welcome To My Portfolio</title>
 </head>
@@ -60,6 +60,9 @@
             Web Developer, Programmer, Designer & Entrepreneur
           </h2>
           <div class="icons">
+            <a href="https://github.com/rhobrenz665" target="_blank">
+                <i class="fab fa-github fa-2x"></i>
+            </a>
             <a href="https://twitter.com/rhobrenz665" target="_blank">
               <i class="fab fa-twitter fa-2x"></i>
             </a>
@@ -69,10 +72,8 @@
             <a href="https://www.linkedin.com/in/rhobrenz-buenavista-782654164/" target="_blank">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://github.com/rhobrenz665" target="_blank">
-              <i class="fab fa-github fa-2x"></i>
-            </a>
-            <a href="https://www.instagram.com/rhobrenz665/" target="_blank">
+           
+              <a href="https://www.instagram.com/rhobrenz665/" target="_blank">
               <i class="fab fa-instagram fa-2x"></i>
             </a>
           </div>
